apps/lite/ui/src/routes/project/$id/workspace/OutlinePanel.module.css
.workspaceControls {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-block-start: var(--panel-padding);
	margin-block-end: 4px;
	overflow: hidden;
	gap: 6px;
}

.workspaceControlsLeft {
	display: flex;
	align-items: center;
	overflow: hidden;
	gap: 4px;
}

.workspaceName {
	overflow: hidden;
	font-weight: 700;
	font-size: 15px;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.branchBtn {
	flex-shrink: 0;
	font-weight: 550;
	font-size: 13px;
}

.panel {
	display: grid;
	grid-template-rows: auto auto minmax(0, 1fr);
	padding-inline: var(--panel-padding);
	gap: 12px;
}

.headInfo {
	display: flex;
	row-gap: 12px;
	flex-direction: column;
	overflow: auto;
	scroll-padding: var(--panel-padding);
}

.segments {
	display: flex;
	row-gap: 24px;
	flex-direction: column;
}

.segment {
	--commit-row-left-spacing: 6px;
	--commit-state-width: 8px;

	display: flex;
	flex-direction: column;
}

.stack {
	display: flex;
	flex-direction: column;

	&:last-child {
		margin-block-end: var(--panel-padding);
	}
}

.stackRowLabel::before {
	/* Don't shrink height with empty text content - relevant for context menu hitbox. */
	content: "\00a0";
}

.branchRowLabel,
.noCommits {
	margin-inline-start: calc(var(--commit-row-left-spacing) + var(--commit-state-width));
}

.branchRowLabel,
.renameBranchInput {
	font-weight: 600;
	font-size: 14px;
}

.editorForm {
	display: flex;
	row-gap: var(--row-block-padding);
	flex-grow: 1;
	flex-direction: column;
	min-width: 0;
	padding-block: var(--row-block-padding);
	line-height: var(--row-line-height);
}

.editorInput {
	flex-grow: 1;
	padding-inline: var(--row-inline-padding);

	&:focus {
		outline: none;
	}
}

.editorHelp {
	padding-inline: var(--row-inline-padding);
	font-size: 11px;
	line-height: 1.3;
	text-transform: lowercase;
}

.editorShortcut {
	color: var(--fill-gray-fg);
}

.editorShortcutLabel {
	color: var(--fill-gray-fg);
	opacity: 0.6;
}

.rewordCommitInput {
	field-sizing: content;
	box-sizing: content-box;
	min-height: calc(2lh);
	resize: none;
}

.operationSourcePreview {
	display: flex;
	z-index: 1;
	/* Relative to panel */
	position: absolute;
	bottom: var(--panel-padding);
	left: 50%;
	column-gap: 8px;
	align-items: center;
	max-width: min(calc(100% - (2 * var(--panel-padding))), 500px);
	padding: 8px;
	overflow: hidden;
	transform: translateX(-50%);
	border: 1px solid light-dark(rgb(0 0 0 / 0.2), rgb(255 255 255 / 0.16));
	border-radius: 8px;
	background-color: var(--bg-1);
	box-shadow: 0 12px 16px -8px light-dark(rgb(0 0 0 / 0.08), rgb(0 0 0 / 0.4));
	text-overflow: ellipsis;
	white-space: nowrap;
}

.changesSection {
	display: flex;
	row-gap: 2px;
	flex-direction: column;
	padding: 6px;
}

.changesRowLabel {
	display: flex;
	align-items: center;
	padding-inline: 12px;
	padding-block: 9px;
	font-weight: 600;
	font-size: 14px;
}

.changesCountBubble {
	display: flex;
	align-items: center;
	justify-content: center;
	min-width: 20px;
	height: 16px;
	margin-inline-start: 6px;
	padding-inline: 4px;
	padding-block: 2px;
	border-radius: 10px;
	background: var(--fill-gray-bg);
	color: var(--fill-gray-fg);
	font-size: 10px;

	.selected & {
		background: var(--fill-gray-fg);
		color: var(--fill-gray-bg);
	}
}

.commitControls {
	display: flex;
	flex-direction: column;
	border: 1px solid var(--border-2);
	border-radius: 8px;
	background: var(--bg-1);
	font-size: 13px;
}

.commitTextarea {
	padding: 12px;
	resize: vertical;
	field-sizing: content;
	box-sizing: content-box;
	min-height: calc(2lh);
}

.commitControlsFooter {
	display: flex;
	column-gap: 10px;
	padding: 12px;
}

.commitTargetComboboxTrigger {
	flex-grow: 1;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.commitTargetComboboxPopup {
	display: flex;
	flex-direction: column;
	width: max(var(--anchor-width), 200px);
}

.commitTargetComboboxInput {
	padding-inline: var(--row-inline-padding);
	padding-block: var(--row-block-padding);
	border-bottom: 1px solid var(--border-2);

	&:focus {
		outline: none;
	}
}

.commitTargetComboboxList {
	--approx-input-height: 50px;
	max-height: min(300px, calc(var(--available-height) - var(--approx-input-height)));
	overflow: auto;

	&:not(:empty) {
		padding-block: var(--row-block-padding);
	}
}

.commitTargetComboboxItem {
	padding-inline: var(--row-inline-padding);
	padding-block: var(--row-block-padding);
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	cursor: default;

	&[data-highlighted] {
		background-color: var(--bg-2);
	}
}

.commitTargetComboboxEmpty {
	padding-inline: var(--row-inline-padding);
	padding-block: var(--row-block-padding);
	color: var(--color-text-secondary);
}

.commitRowLabel,
.rewordCommitInput,
.noCommits {
	font-size: 13px;
}

.commitRowLabel {
	display: flex;
	flex-grow: 1;
	align-items: center;
	margin-inline-start: var(--commit-row-left-spacing);
	overflow: hidden;
}

[data-status="LocalOnly"] {
	--commit-status-color: var(--commit-local);
}

[data-status="LocalAndRemote"] {
	--commit-status-color: var(--commit-remote);
}

[data-status="Integrated"] {
	--commit-status-color: var(--commit-integrated);
}

[data-status="Diverged"] {
	--commit-status-color: var(--commit-shadow);
}

.commitState {
	display: block;
	flex-shrink: 0;
	aspect-ratio: 1;
	width: var(--commit-state-width);
	border: 1.5px solid var(--commit-status-color);
	border-radius: 50%;
}

